# gojira-sdl2

./: .gitignore  .gitmodules  CMakeLists.txt
engine/2d_map/: Map.cpp  Map.h  MapLayer.cpp  MapLayer.h  MapObject.cpp  MapObjectGroupLayer.cpp  MapTileSet.cpp  MapTileSet.h  MapTiledLayer.cpp  MapTiledLayer.h
engine/2d_map/include/: Map.h  MapObject.h  MapObjectGroupLayer.h  MapTileSet.h  MapTiledLayer.h
engine/2d_map/src/: Map.cpp  MapObject.cpp  MapObjectGroupLayer.cpp  MapTileSet.cpp  MapTiledLayer.cpp
engine/2d_physics/: PhysicBox.cpp  PhysicBox.h  PhysicCircle.cpp  PhysicCircle.h  PhysicObject.cpp  PhysicObject.h  PhysicWorld.cpp  PhysicWorld.h
engine/2d_sprites/: Animation.cpp  Animation.h  AnimationFrame.cpp  Frame.cpp  FramesStore.cpp  FramesStore.h  Sprite.cpp  Sprite.h
engine/2d_sprites/bitmap/: Animation.cpp  Animation.h  AnimationFrame.cpp  Frame.cpp  Frame.h  FramesStore.cpp  FramesStore.h  Sprite.cpp  Sprite.h
engine/2d_sprites/include/: Animation.h  Frame.h  FramesStore.h
engine/2d_sprites/spriter/: examplefilefactory.cpp  examplefilefactory.h  exampleobjectfactory.cpp  exampleobjectfactory.h  jsonspriterfileattributewrapper.cpp  jsonspriterfileattributewrapper.h  jsonspriterfiledocumentwrapper.cpp  jsonspriterfiledocumentwrapper.h  jsonspriterfileelementwrapper.cpp  jsonspriterfileelementwrapper.h  sdl2atlasfile.cpp  sdl2atlasfile.h  sdl2boneinstanceinfo.cpp  sdl2boneinstanceinfo.h  sdl2boxinstanceinfo.cpp  sdl2boxinstanceinfo.h  sdl2imagefile.cpp  sdl2imagefile.h  sdl2pointinstanceinfo.cpp  sdl2pointinstanceinfo.h  sdl2soundfile.cpp  sdl2soundfile.h  sdl2soundobjectinforeference.cpp  sdl2soundobjectinforeference.h
engine/2d_sprites/src/: AnimationFrame.cpp  FramesStore.cpp
engine/core/: EventsManager.cpp  Graphics.cpp  Utils.hpp
engine/core/include/: Utils.hpp
engine/core/src/: Graphics.cpp
engine/entities/: Entity.cpp  Entity.h
engine/input/: InputController.cpp  Joystick.cpp
engine/input/src/: InputController.cpp
